--- a/css/subscription.css
+++ b/css/subscription.css
@@ -20,9 +20,16 @@
 
 }
 
+#three-month-img-div {
+    margin-left: 0px;
+}
+
+#three-month-text {
+    margin-left: -25px;
+}
 
 h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -44,7 +51,6 @@ h1 {
 
 .sub-text {
     color: black;
-    font-size: 1.5rem;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -73,15 +79,13 @@ h1 {
 
 .sub-item {
     width: 100%;
-    gap: 20px;
+    gap: 40px;
     cursor: pointer;
     padding: 20px;
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    
-
     background-color: lightgray;
 }
 
@@ -96,7 +100,7 @@ h1 {
 
 
 .sub-img-small {
-    margin-left: -30px;
+    margin-left: -40px;
     height: 100px;
 }
 
@@ -128,13 +132,24 @@ h1 {
 }
 
 .products-title{
+    margin-bottom: 40px;
     color: #7F427A;
     font-family: "Quicksand", sans-serif;
     font-size: 4rem;
     text-align: center;
 }
 
+
+
 @media screen and (min-width: 768px) {
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    .sub-text {
+        font-size: 1.5rem;
+    }
     .sub-container {
         padding: 0 10vw 10vh 10vw;
     }
@@ -144,6 +159,7 @@ h1 {
     }
 
     .sub-item {
+        height: 17rem;
         flex-flow: row;
         width: 100%;
         align-items: start;
